fixing overflowing text

--- a/static/css/signup-form.css
+++ b/static/css/signup-form.css
@@ -41,3 +41,12 @@
 .signup-form button:hover {
   background-color: var(--light-violet);
 }
+
+@media (max-width: 480px) {
+  .signup-form{
+    padding: 5px;
+  }
+  .signup-form h2{
+    font-size: 25px;
+  }
+}
